--- a/feedbacks.html
+++ b/feedbacks.html
@@ -68,7 +68,7 @@
     <div class="container mt-2">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/admin.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
           <li class="breadcrumb-item active">Feedbacks</li>
         </ol>
       </nav>
