--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="#">Categories</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/feedbacks.html">Feedbacks</a>
+            <a class="nav-link" href="./feedbacks.html">Feedbacks</a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
