configure link for image

--- a/feedbacks/feedbacks.html
+++ b/feedbacks/feedbacks.html
@@ -68,7 +68,7 @@
     <div class="container mt-2">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
           <li class="breadcrumb-item active">Feedbacks</li>
         </ol>
       </nav>
@@ -80,7 +80,7 @@
     <div class="container mt-2">
       <div class="row justify-content-between">
         <div class="card col-3">
-          <img src="assets/img/review.jpg" class="card-img-top" alt="..." />
+          <img src="../assets/img/review.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <span class="badge badge-secondary">New</span>
             <h5 class="card-title">I like it</h5>
